--- a/IA/TP1/TP_cancer-solution.ipynb
+++ b/IA/TP1/TP_cancer-solution.ipynb
@@ -1,44 +1,33 @@
 {
  "cells": [
   {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Vous allez faire la classification par le plus proche voisin  du dataset Iris.\n",
-    "\n",
-    "Vous avez vu l'essentiel  pendant le cours.\n",
-    "\n",
-    "Exécutez les commandes et essayez de comprendre comment ca fonctionne"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Récupérez le dataset iris  (voir le notebook introapprentissage.ipynb)\n",
-    " "
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#On récupère le dataset  pour le cancer des seins\n",
+    "\n",
+    "from sklearn.datasets import load_breast_cancer\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,7 +104,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment les étiquettes sont représentées?"
+    "Comment les étiquettes sont représentées"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Afficher  les 5ème et 6ème données de ce dataset \n",
+    "\n",
+    "Quels sont les \"mean perimetre\" de ces données?\n",
+    "\n",
+    "Quelles sont les étiquettes pour ces données?"
    ]
   },
   {
@@ -131,16 +138,9 @@
    "source": [
     "Partitionez le dataset pour avoir X_train, y_train X_test, y_test\n",
     "\n",
-    "%80 pour l'ensemble d'apprentissage, %20 pour l'ensemble de test\n",
+    "%75 pour l'ensemble d'apprentissage, %25 pour l'ensemble de test\n",
     "\n",
-    "https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.train_test_split.html"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Quelles sont les nombres de données dans l'ensemble d'apprentissage et celles qui sont dans l'ensemble de test?\n"
+    "mettez random_state=42 pour avoir tous les mêmes valeurs"
    ]
   },
   {
@@ -185,13 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prevoyez l'étiquette  pour la donnée avec \n",
-    "'sepal length (cm)' = 5\n",
-    "'sepal width (cm)' = 2.9\n",
-    "'petal length (cm)' = 1\n",
-    "'petal width (cm)' = 0.2\n",
-    "\n",
-    "Attention la donnée doit être une matrice avec 1 ligne et 4 colonnes"
+    "Affichez le score pour l'ensemble de test"
    ]
   },
   {
@@ -202,55 +196,68 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Affichez le score (la probabilité d'estimer la bonne étiquette) pour l'ensemble de test"
+    "xnew= [1.6e+01, 1.674e+01, 9.873e+01, 6.894e+02, 9.883e-02, 1.364e-01,\n",
+    "       7.721e-02, 6.142e-02, 1.668e-01, 6.869e-02, 3.720e-01, 8.423e-01,\n",
+    "       2.304e+00, 3.484e+01, 4.123e-03, 1.819e-02, 1.996e-02, 1.004e-02,\n",
+    "       1.055e-02, 3.237e-03, 1.676e+01, 2.043e+01, 1.097e+02, 8.569e+02,\n",
+    "       1.2e-01, 3e-01, 1.856e-01, 1.018e-01, 2.2e-01, 8.8e-02]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Vous ne changez pas les ensembles d'apprentissage et de test.\n",
     "\n",
-    "Vous changez la méthode k=2, k=3, k=4, k+5\n",
+    "Quelle est l'étiquette pour la nouvelle donnée\n",
     "\n",
-    "Vous faites la prédiction pour xnew  avec ces méthodes \n",
-    "\n",
-    "Calculer les scores pour ces méthodes pour ces modèles et dessiner la courbe\n",
-    "\n",
-    "Que observez-vous?\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "Nous essayons de dessiner le score pour le dataset cancer  pour différentes valeurs de k=2 ..10\n",
+    "\n",
+    "Les résultats sont différents ou non si on change le nombre de voisins?\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Prétraitement de données (Effet de \"Scaling\")\n",
+    "\n",
+    "https://scikit-learn.org/stable/modules/preprocessing.html#preprocessing-scaler\n",
+    "\n",
+    "Lisez la partie concernant la partie prétraitement\n",
+    "\n",
+    "Faire les mêmes exercices (dessiner les scores pour différents nombres de voisins)\n",
+    "\n",
+    "pour les données prétraitées avec StandardScaler et MinMaxScaler\n",
+    "\n",
+    "\n",
+    "Les résultats sont différents ou non?\n"
+   ]
   }
  ],
  "metadata": {
